# AnyGPT

./: .env.example  .eslintrc.cjs  .gitignore  .prettierrc.json  LICENSE  README.md  deploy-api.sh  docker-compose.yml  env.txt  jsconfig.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  traefik.toml  tsconfig.json  turbo.json
app/: config.py  errors.py  main.py
app/api/: package.json  tsconfig.json
app/api/providers/: gemini.ts  openai.ts
app/db/: __init__.py  utils.py
app/db/managers/: __init__.py  providers.py  users.py
app/db/models/: __init__.py  provider.py  user.py
app/guards/: __init__.py  auth.py
app/hooks/: __init__.py  before_request.py  utils.py
app/middlewares/: __init__.py  rate_limit.py
app/providers/: __init__.py  utils.py
app/providers/all/: openai.py
app/providers/chat/: __init__.py  anthropic.py  cohere.py  google.py  llama.py  mistral.py  perplexity.py
app/providers/images/: __init__.py  midjourney.py  prodia.py
app/responses/: __init__.py  pretty_json.py
app/routes/: __init__.py  utils.py
app/routes/handlers/: __init__.py  admin.py  chat.py  home.py  images.py  models.py
apps/api/: .env.example  README.md  devmodels.json  keys.json  models.json  models.schema.json  package.json  providers.json  providers.schema.json  server.ts  tsconfig.json
apps/ui/: api.js  db.json  package.json  server.js  server.ts  tailwind.config.ts  tsconfig.json  vite.config.ts
docker/: Dockerfile.app  Dockerfile.traefik
src/webui/: index.html
tests/: __main__.py  config.py  utils.py
values/: .env.example
(+51 files in other folders)
