[tool.poetry]
name = "py-api"
version = "1.0.0"
description = "A reverse proxy for accessing AI for free."
authors = ["ThatLukinhasGuy"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.30.3"
litestar = "^2.9.1"
ujson = "^5.10.0"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
openai = "^1.37.0"
asyncer = "^0.0.7"
sqlmodel = "^0.0.21"
sqlalchemy = "^2.0.31"
asyncpg = "^0.29.0"
aiohttp = "^3.9.5"
